src/App.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');

:root {
  --green: #59981A;
  --yellow: #ecf87f;
  --grey: #333333;
  --background: #3D550Cdd;
  --text-and-lines: #000000;
  ;
}
body {
  background-color: var(--background);
  user-select: none;
}
hr {
  width: 100%;
}
.main-layout {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  max-width: 500px;
  margin: auto;
  font-family: 'Libre Baskerville', serif;
  color: var(--text-and-lines);
}

.title {
  font-size: 1.5em;
}

.letter-grid {
  display: flex;
  width: 100%;
  flex-direction: column;
  align-items: center;
}

.letter-grid-row {
  display: flex;
  flex-direction: row;
  align-content: space-between;
  align-items: center;
}

.letter-grid-item {
  display: flex;
  align-items: center;
  justify-content: center;
  vertical-align: center;
  text-align: center;
  display: flex;
  height: 60px;
  width: 60px;
  border: 2px solid var(--text-and-lines);
  margin: 3px;
  border-radius: 32px;
  font-size: 2em;
}

@media screen and (max-width: 400px) {
  .letter-grid-item {
    height: 50px;
    width: 50px;
    font-size: 1.8em;
  }
}

.yellow-background {
  background-color: var(--yellow);
}

.green-background {
  background-color: var(--green);
}

.grey-background {
  background-color: var(--grey);
}

.keyboard {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-content: center;
}
.keyboard-row {
  display: flex;
  flex-direction: row;
}
.keyboard-button {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 30px;
  width: 30px;
  border: 2px solid var(--text-and-lines);
  margin: 3px;
  font-size: 1.4em;
}

@media screen and (max-width: 400px) {
  .keyboard-button {
    height: 25px;
    width: 25px;
    font-size: 1.2em;
  }
}

.game-over {
  font-size: 1.8em;
  text-align: center;
}

.game-over-restart {
  text-decoration: underline;
  font-size: 0.7em;
}

